include "common.thrift"
namespace java server.msg.auto
namespace csharp NetWork.Auto

struct CSRoomList
{
	1: i32 requestCount
}