include "common.thrift"
namespace java server.msg.auto
namespace csharp NetWork.Auto

struct CSSearchRoom
{
	10:string name
}