namespace java server.msg.auto
namespace csharp NetWork.Auto



//103001 - 104000 角色相关消息
const i32 CS_PING = 103001
const i32 CS_PONG = 103002
const i32 CS_HANDLER = 103003
