include "common.thrift"
namespace java server.msg.auto
namespace csharp NetWork.Auto

struct SCBattleBegin
{
	10:i32 cd
}