include "common.thrift"
namespace java server.msg.auto
namespace csharp NetWork.Auto

struct SCBattleEnd
{
	10:string errorInfo
}