include "common.thrift"
namespace java server.msg.auto
namespace csharp NetWork.Auto

struct SCSearchRoom
{
	10:common.RoomInfo roomInformation
}